@@ -30,10 +30,14 @@ noinst_PROGRAMS += startup.rel
 startup_rel_SOURCES = startup/bspclean.c ../../shared/bsplibc.c \
     ../../shared/bsppost.c startup/bspstart.c ../../shared/bootcard.c \
     ../../m68k/shared/m68kpretaskinghook.c \
-    ../../shared/sbrk.c ../../m68k/shared/setvec.c \
-    ../../shared/gnatinstallhandler.c
+    ../../shared/sbrk.c ../../m68k/shared/setvec.c
 startup_rel_CPPFLAGS = $(AM_CPPFLAGS)
 startup_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
+
+noinst_PROGRAMS += gnatsupp.rel
+gnatsupp_rel_SOURCES = ../../shared/gnatinstallhandler.c
+gnatsupp_rel_CPPFLAGS = $(AM_CPPFLAGS)
+gnatsupp_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
 
 noinst_PROGRAMS += clock.rel
 clock_rel_SOURCES = clock/ckinit.c
@@ -41,9 +45,14 @@ clock_rel_CPPFLAGS = $(AM_CPPFLAGS)
 clock_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
 
 noinst_PROGRAMS += console.rel
-console_rel_SOURCES = console/console.c ../../shared/dummy_printk_support.c
+console_rel_SOURCES = console/console.c
 console_rel_CPPFLAGS = $(AM_CPPFLAGS)
 console_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
+
+noinst_PROGRAMS += debugio.rel
+debugio_rel_SOURCES = ../../shared/dummy_printk_support.c
+debugio_rel_CPPFLAGS = $(AM_CPPFLAGS)
+debugio_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
 
 noinst_PROGRAMS += timer.rel
 timer_rel_SOURCES = timer/timer.c timer/timerisr.S
@@ -60,12 +69,22 @@ endif
 
 noinst_LIBRARIES = libbsp.a
 libbsp_a_SOURCES =
-libbsp_a_LIBADD = startup.rel clock.rel console.rel timer.rel
+libbsp_a_LIBADD = gnatsupp.rel clock.rel console.rel debugio.rel timer.rel
 if HAS_MP
 libbsp_a_LIBADD += shmsupp.rel
 endif
 libbsp_a_LIBADD += ../../../libcpu/@RTEMS_CPU@/shared/cache.rel \
     ../../../libcpu/@RTEMS_CPU@/shared/misc.rel
+
+libbsp_a_LIBADD += \
+startup_rel-bspclean.o \
+startup_rel-bsplibc.o \
+startup_rel-bsppost.o \
+startup_rel-bspstart.o \
+startup_rel-bootcard.o \
+startup_rel-m68kpretaskinghook.o \
+startup_rel-sbrk.o \
+startup_rel-setvec.o
 
 EXTRA_DIST += times
 
